<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HW3</string>
    <string name="greeting">Welcome to Trivia App</string>
    <string name="title_activity_trivia">TriviaActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_question_test">QuestionTestActivity</string>
    <string name="title_activity_create_question">CreateQuestionActivity</string>
    <string name="button_text_start">Start Trivia</string>
    <string name="button_text_create">Create Quiz Question</string>
    <string name="button_text_delete">Delete All My Questions</string>
    <string name="button_text_exit">Exit</string>
    <string name="method_GET">GET</string>
    <string name="method_POST">POST</string>
    <string name="group_id">replace with group id provided</string>
    <string name="delete_all_url">http://dev.theappsdr.com/apis/trivia/deleteAll.php</string>
    <string name="get_all_url">http://dev.theappsdr.com/apis/trivia/getAll.php</string>
    <string name="save_url">http://dev.theappsdr.com/apis/trivia/saveNew.php</string>
    <string name="title_activity_create_question_async_task">CreateQuestionAsyncTask</string>
    <string name="delete_dialog_title">Delete Questions</string>
    <string name="delete_dialog_confirm">Are you sure you want to delete all your questions?</string>
    <string name="delete_dialog_no">No</string>
    <string name="delete_dialog_yes">Yes</string>
    <string name="delete_dialog_as_deleting">Deleting Questions</string>
    <string name="delete_dialog_as_del_msg">Deleting . . . </string>
    <string name="create_title">CreateQuestionActivity</string>
    <string name="create_header">Create A New Question</string>
    <string name="create_q_hint">Type question here</string>
    <string name="create_opt_hint">Type option here</string>
    <string name="create_img_hint">Paste Image URL here (optional)</string>
    <string name="button_submit">Submit</string>
    <string name="result_top_text">Trivia Results</string>
    <string name="answers">Correct Answers</string>
    <string name="progress_percent">12</string>
    <string name="result_comment">Try again and see if you can get all the correct answers!</string>
    <string name="quit">Quit</string>
    <string name="try_again">Try Again</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="action_settings">Settings</string>
    <string name="trivia_quit">Quit</string>
    <string name="trivia_next">Next</string>

</resources>