<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hw3.ResultActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:text="@string/result_top_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/answers"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <TextView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_percent"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.89" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="50dp"
        android:layout_weight="0.23"
        android:paddingBottom="20dp"
        android:text="@string/result_comment"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp" >

        <Button
            android:id="@+id/button1"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:focusable="false"
            android:text="@string/quit"
            android:background="@layout/round_shape"
            android:shadowColor="#A8A8A8"
             />

        <Button
            android:id="@+id/button2"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_marginLeft="120dp"
            android:text="@string/try_again" 
             android:background="@layout/round_shape"
            android:shadowColor="#A8A8A8"/>

    </LinearLayout>

</LinearLayout>